# vscode-binsleuth

./: .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  package-lock.json  package.json  package.nls.ja.json  package.nls.json  package.nls.zh-cn.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: spec.md
l10n/: bundle.l10n.ja.json  bundle.l10n.zh-cn.json
src/: extension.ts  panel.ts
src-rust/: Cargo.toml
src-rust/src/: main.rs
