[package]
name = "binsleuth-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Analysis bridge for vscode-binsleuth: wraps the binsleuth crate and outputs JSON"

[[bin]]
name = "binsleuth-bridge"
path = "src/main.rs"

[dependencies]
binsleuth  = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
